--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,11 +7,11 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="" href="#">Home</a>
-      </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/dashboard" href="#">Dashboard</a>
+        <a class="nav-link" routerLink='/home' [ngClass]="{'active':cRoute == '/home'}">Home</a>
+      </li>
+      <li class="nav-item" >
+        <a class="nav-link" routerLink="/dashboard"  [ngClass]="{'active':cRoute=='/dashboard'}">Dashboard</a>
       </li>
     </ul>
   </div>
