--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,8 @@
 <h1>Home</h1>
+<div class="container">
+        <div class="row">
+            <div class="col-md-7 offset-md-3">
+                <login></login>
+            </div>
+        </div>
+</div>
