--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,11 +10,16 @@
       <li class="nav-item">
         <a class="nav-link" routerLink='/home' [ngClass]="{'active':cRoute == '/home'}">Home</a>
       </li>
-      <li class="nav-item" >
+      <!-- <li class="nav-item" >
         <a class="nav-link" routerLink="/dashboard"  [ngClass]="{'active':cRoute=='/dashboard'}">Dashboard</a>
-      </li>
+      </li> -->
     </ul>
   </div>
+  <ul class="nav justify-content-end">
+    <li class="nav-item" *ngIf="isLoggedIn">
+      <a class="nav-link disabled" href="javascript:void(0)" tabindex="-1" aria-disabled="true" (click)="logout()">Logout</a>
+    </li>
+  </ul>
 </nav>
 
 <div class="container-fluid">
