- Products module added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">STORE</a>
+  <a class="navbar-brand" href="javascript:void(0)">STORE</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -10,9 +10,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink='/home' [ngClass]="{'active':cRoute == '/home'}">Home</a>
       </li>
-      <!-- <li class="nav-item" >
-        <a class="nav-link" routerLink="/dashboard"  [ngClass]="{'active':cRoute=='/dashboard'}">Dashboard</a>
-      </li> -->
+      <li class="nav-item" >
+        <a class="nav-link" routerLink="/products"  [ngClass]="{'active':cRoute=='/products'}">Products</a>
+      </li>
     </ul>
   </div>
   <ul class="nav justify-content-end">
